--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,20 @@
 ---
 dist: xenial
+
 language: ruby
+
 rvm:
 - 3.0.1
+
+before_script:
+  - bundle install
+  - bundle exec rake db:migrate
+
+env:
+  - DB=postgres:///
+
+addons:
+  chrome: stable
+
+services:
+  - postgresql
